<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndGro</string>
    <string name="action_settings">Settings</string>
    <string name="srch_button_txt">Søg</string>
    <string name="eks_button_txt">Eks.</string>
    <string name="rev_button_txt">Omvendt</string>
    <string name="srch_txt_hint">Indtast søgetekst</string>
    <string name="choose_dict">Find ordbøger</string>
    <string name="flag_billede_fra_dansk">Flag-billede fra-dansk</string>
    <string name="flag_billede_til_dansk">Flag-billede til-dansk</string>
    <string name="fasthold_sk_rm_t_ndt">Fasthold skærm tændt</string>
    <string name="title_activity_browse_files">BrowseFiles</string>
    <string name="hello_world">Hello world!</string>
    <string name="choose_button">Vælg</string>
    <string name="no_data">No Data</string>
    <string name="place">Placering:</string>

</resources>
